@@ -2,12 +2,14 @@
 # This file is a part of zmk test system.
 include zmk/internalTest.mk
 
-t:: all install uninstall clean
+t:: all all-sysroot install uninstall clean
 
 $(eval $(ZMK.isolateHostToolchain))
 # MacOS uses c++, GNU uses g++ by default.
 # Pick one for test consistency.
 %.log: ZMK.makeOverrides += CXX=c++
+# Some logs behave as if a sysroot was requested.
+%-sysroot.log: ZMK.makeOverrides += Toolchain.SysRoot=/path
 # Test depends on source files
 %.log: main.c main.cc main.cpp main.cxx main.m src/main.c
 
@@ -25,6 +27,20 @@ all: all.log
 	GREP -qFx 'c++ -o prog5 prog5-main.o' <$<
 	GREP -qFx 'cc -MMD$(if $(ZMK.test.IsOutOfTreeBuild), -MF src/prog6-main.d) -c -o src/prog6-main.o $(ZMK.test.OutOfTreeSourcePath)src/main.c' <$<
 	GREP -qFx 'cc -o prog6 src/prog6-main.o' <$<
+all-sysroot: all-sysroot.log
+	# C/C++/ObjC programs can be built against the configured sysroot.
+	GREP -qFx 'cc -MMD$(if $(ZMK.test.IsOutOfTreeBuild), -MF prog1-main.d) -c --sysroot=/path -o prog1-main.o $(ZMK.test.OutOfTreeSourcePath)main.c' <$<
+	GREP -qFx 'cc --sysroot=/path -o prog1 prog1-main.o' <$<
+	GREP -qFx 'c++ -MMD$(if $(ZMK.test.IsOutOfTreeBuild), -MF prog2-main.d) -c --sysroot=/path -o prog2-main.o $(ZMK.test.OutOfTreeSourcePath)main.cpp' <$<
+	GREP -qFx 'c++ --sysroot=/path -o prog2 prog2-main.o' <$<
+	GREP -qFx 'cc -MMD$(if $(ZMK.test.IsOutOfTreeBuild), -MF prog3-main.d) -c --sysroot=/path -o prog3-main.o $(ZMK.test.OutOfTreeSourcePath)main.m' <$<
+	GREP -qFx 'cc --sysroot=/path -o prog3 prog3-main.o -lobjc' <$<
+	GREP -qFx 'c++ -MMD$(if $(ZMK.test.IsOutOfTreeBuild), -MF prog4-main.d) -c --sysroot=/path -o prog4-main.o $(ZMK.test.OutOfTreeSourcePath)main.cxx' <$<
+	GREP -qFx 'c++ --sysroot=/path -o prog4 prog4-main.o' <$<
+	GREP -qFx 'c++ -MMD$(if $(ZMK.test.IsOutOfTreeBuild), -MF prog5-main.d) -c --sysroot=/path -o prog5-main.o $(ZMK.test.OutOfTreeSourcePath)main.cc' <$<
+	GREP -qFx 'c++ --sysroot=/path -o prog5 prog5-main.o' <$<
+	GREP -qFx 'cc -MMD$(if $(ZMK.test.IsOutOfTreeBuild), -MF src/prog6-main.d) -c --sysroot=/path -o src/prog6-main.o $(ZMK.test.OutOfTreeSourcePath)src/main.c' <$<
+	GREP -qFx 'cc --sysroot=/path -o prog6 src/prog6-main.o' <$<
 install: install.log
 	# C/C++/ObjC programs can be installed.
 	GREP -qFx 'install -d /usr/local/bin' <$<
