@@ -60,7 +60,7 @@ endif # !symbol export control
 # Link library objects.
 $1: $$($1.Objects)
 	$$(call Silent.Say,$$($1.SuggestedLinkerSymbol),$$@)
-	$$(Silent.Command)$$(strip $$(if $$($1.ObjectsObjC),$$(LINK.m),$$(if $$($1.ObjectsCxx),$$(LINK.cc),$$(LINK.o))) -o $$@ $$(filter %.o,$$^) $$(LDLIBS))
+	$$(Silent.Command)$$(strip $$(if $$($1.ObjectsObjC),$$(LINK.m),$$(if $$($1.ObjectsCxx),$$(LINK.cc),$$(LINK.o))) $$(if $$(Toolchain.SysRoot),--sysroot=$$(Toolchain.SysRoot)) -o $$@ $$(filter %.o,$$^) $$(LDLIBS))
 
 # Install library binary.
 $1.InstallDir ?= $$(libdir)
